# bella-tracer-v2

./: .gitignore  Makefile  README.en.md  README.md  README.tr.md  docker-compose.yaml  main.py  neo4j_scan_report.json  pyproject.toml
artifacts/dataset/tmp-partial-parquet-files/: batch_00000.parquet
artifacts/dataset_12-15-2025_002746/: metadata.json
artifacts/dataset_12-15-2025_002746/parquet-files/: batch_00000.parquet
artifacts/dataset_12-15-2025_003428/: metadata.json
artifacts/dataset_12-15-2025_003428/parquet-files/: batch_00000.parquet
artifacts/dataset_12-15-2025_004509/: column_configs.json
artifacts/dataset_12-15-2025_005215/: metadata.json  model_configs.json
artifacts/dataset_12-15-2025_005215/parquet-files/: batch_00000.parquet
artifacts/dataset_12-15-2025_010347/: metadata.json
artifacts/dataset_12-15-2025_010347/parquet-files/: batch_00000.parquet
artifacts/dataset_12-15-2025_010845/: metadata.json
artifacts/dataset_12-15-2025_010845/parquet-files/: batch_00000.parquet
artifacts/dataset_12-15-2025_011041/: metadata.json
artifacts/dataset_12-15-2025_011041/parquet-files/: batch_00000.parquet
src/bella_tracer_v2/: __init__.py  agent.py  complex_traces.jsonl  eda.ipynb  main.py  models.py  scan_database.py  synthetic_data.py  synthetic_traces.jsonl
src/bella_tracer_v2/api/: app.py
src/bella_tracer_v2/artifacts/dataset/: column_configs.json
src/bella_tracer_v2/artifacts/dataset_12-09-2025_220053/: column_configs.json  model_configs.json
src/bella_tracer_v2/artifacts/dataset_12-09-2025_220114/: column_configs.json
src/bella_tracer_v2/artifacts/dataset_12-09-2025_221455/: model_configs.json
src/bella_tracer_v2/artifacts/dataset_12-09-2025_221743/: model_configs.json
src/bella_tracer_v2/pipelines/: __init__.py  knowledge_graph_parser.py  synthetic_data_generator.py
src/bella_tracer_v2/services/: __init__.py  kafka.py
(+29 files in other folders)
