[project]
name = "bella-tracer-v2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "data-designer>=0.1.4",
    "dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "langchain-openai>=1.1.3",
    "langgraph>=1.0.5",
    "neo4j>=5.28.2",
    "neo4j-graphrag>=1.2.1",
    "notebook>=7.5.0",
    "prefect>=3.6.6",
    "pypdf>=6.4.2",
]


[project.scripts]
api="bella_tracer_v2.main:run"
knowledge_graph_parser_pipeline="bella_tracer_v2.main:run_knowledge_graph_parser_pipeline"
synthetic_data_generator_pipeline="bella_tracer_v2.main:run_synthetic_data_generator_pipeline"
create_neo4j_index="bella_tracer_v2.main:create_neo4j_index"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
